# Minimal-compiled-sample

./: CMakeLists.txt  FindXRandr.cmake  README.md
docs/: game plan.docx
src/: main.cpp
src/game/: ResourceHandler.h  ResourceHandlerDef.cpp  Timer.h  game.cpp  game.h  gameDef.h  game_def.h  game_mod.h  resourceHandler.h  timer.h
src/game/game/: game.cpp  game.h  gameSettings.h
src/game/game objects/: Block.h  GameObject.h  Tank.cpp  Tank.h  block.h  game.cpp  game.h  gameObject.cpp  gameObject.h  keyboard.h  tank.cpp  tank.h
src/game/game objects/game object/: gameObject.cpp  gameObject.h
src/game/game objects/tank/: tank.cpp  tank.h
src/game/resources/: resourceHandler.h  resources.h
src/window/: WinEventHandler.h  WinEventhandler.cpp  WinRenderThread.h  winEventHandler.cpp  winEventHandler.h  winRenderThread.h  window.h
